--- a/src/pages/UserDashboard/UserDashboardLayout.module.css
+++ b/src/pages/UserDashboard/UserDashboardLayout.module.css
@@ -84,6 +84,8 @@
   padding: 2rem;
   overflow-y: auto;
   background: white;
+  position: relative;
+  min-height: calc(100vh - 80px);
 }
 
 /* Responsive design */
