--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -78,6 +78,7 @@
   --text-tertiary: #666666;
   --text-quaternary: #999999;
   --text-dark: #1A202C;
+  --text-dark-gray: #2D3748;
   --text-medium: #4A5568;
   --text-light: #A0AEC0;
 
