--- a/src/pages/UserAccount/UserAccount.module.css
+++ b/src/pages/UserAccount/UserAccount.module.css
@@ -27,7 +27,7 @@
   font-family: 'Inter', sans-serif;
   font-size: 2rem;
   font-weight: 500;
-  color: var(--purple);
+  color: var(--text-dark-gray);
   margin: 0;
 }
 
