--- a/src/shared/components/DataTable/DataTable.module.css
+++ b/src/shared/components/DataTable/DataTable.module.css
@@ -4,10 +4,11 @@
   border-radius: 0;
   overflow: hidden;
   margin-top: 1rem;
+  width: fit-content;
 }
 
 .table {
-  width: 100%;
+  width: auto;
   border-collapse: collapse;
 }
 
