--- a/src/pages/UserDashboard/PdfPage/PdfPage.module.css
+++ b/src/pages/UserDashboard/PdfPage/PdfPage.module.css
@@ -158,6 +158,8 @@
   border-radius: 0;
   overflow: hidden;
   margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 .fileName {
