--- a/src/shared/components/Navbar/Navbar.module.css
+++ b/src/shared/components/Navbar/Navbar.module.css
@@ -1,6 +1,7 @@
 .navbar {
   background-color: var(--purple);
   padding: 1rem 0;
+  margin: 0;
   box-shadow: 0 2px 4px var(--shadow-black-10);
   position: relative;
   z-index: 1000;
@@ -14,6 +15,7 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
+  min-height: 56px;
 }
 
 .navCenter {
