--- a/src/pages/UserDashboard/FolderBookmark/FolderBookmark.module.css
+++ b/src/pages/UserDashboard/FolderBookmark/FolderBookmark.module.css
@@ -94,7 +94,7 @@
 }
 
 .refreshAllButton:hover:not(:disabled) {
-  background-color: #f5f5f5;
+  background-color: var(--bg-light);
   color: var(--teal);
 }
 
